@@ -1,7 +1,7 @@
 {:paths ["src/clj" "resources" "target" "src/cljs"]
  :aliases {:dev {:extra-deps {binaryage/devtools {:mvn/version "0.9.10"}}}}
 
- :deps {org.clojure/clojure         {:mvn/version "1.10.0-beta3"}
+ :deps {org.clojure/clojure         {:mvn/version "1.10.1"}
         org.clojure/clojurescript   {:mvn/version "1.10.520"}
         reagent                     {:mvn/version "0.8.1"}
         re-frame                    {:mvn/version "0.10.6"}
