@@ -16,3 +16,6 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - First stable version of routing has been done.
 - A dummy `not-found` component has been added.
 - Basic support for `react-native` through `expo` has been added.
+- `./bin/setup.sh` has been added to easily setup the dev environment by install dependencies
+  such as `clj`, `lumo` and `shadow-cljs` local to the project.
+- `./bin/env.sh` has been added to provide useful aliases to help us with development.
